update: css variable and typo #2

--- a/html-css-practice/src/stylesheets/abstracts/_variables.scss
+++ b/html-css-practice/src/stylesheets/abstracts/_variables.scss
@@ -13,5 +13,11 @@ $tablet: calc($extra-lager - 1px);
 
 // Colors
 $background-color: #ffffff;
-$text-color: #000000;
+$main-dark: #000000;
+$secondary-dark: #292A32;
+$highlight: #B9FF66;
+$main-gray: #F3F3F3;
+
+$main-border: 1px solid #191A23;
+$box-shadow: 0px 5px 0px 0px #191A23;
 
