--- a/html-css-practice/src/stylesheets/abstracts/_variables.scss
+++ b/html-css-practice/src/stylesheets/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $tablet: calc($extra-lager - 1px);
 // Colors
 $background-color: #ffffff;
 $main-dark: #000000;
+$border-color: #191A23;
 $secondary-dark: #292A32;
 $highlight: #B9FF66;
 $main-gray: #F3F3F3;
