feat: implement hero and sponsor sections #3

--- a/html-css-practice/src/layout/header.html
+++ b/html-css-practice/src/layout/header.html
@@ -15,7 +15,7 @@
             "list": "[`about us`, `services`, `use cases`, `pricing`, `blog`]"
           }'
         ></include>
-        <li class="nav-item nav-cta">
+        <li class="nav-item cta nav-cta">
           <a class="nav-link text-medium" href="#" target="_blank" rel="noopener noreferrer"
             >Request a quote</a
           >
