--- a/html-css-practice/src/layout/main.html
+++ b/html-css-practice/src/layout/main.html
@@ -1,2 +1,6 @@
 <main>
+  <!-- Hero -->
+  <include src="./src/sections/hero.html"></include>
+  <!-- Sponsors -->
+  <include src="./src/sections/sponsors.html"></include>
 </main>
