--- a/html-css-practice/src/stylesheets/base/_base.scss
+++ b/html-css-practice/src/stylesheets/base/_base.scss
@@ -4,3 +4,13 @@
   max-width: 1241px;
   margin: 0 auto;
 }
+
+.cta {
+  outline: 0;
+  cursor: pointer;
+  transition: border-color .3s, background-color .3s, transform .3s, color .3s;
+
+  &:hover {
+    transform: scale3d(.98, .98, .01);
+  }
+}
