--- a/html-css-practice/src/stylesheets/base/_typography.scss
+++ b/html-css-practice/src/stylesheets/base/_typography.scss
@@ -14,32 +14,40 @@ body {
   font-family: $primary-font;
 }
 
+button {
+  font-family: inherit;
+}
+
 .text {
-  font-weight: 400;
-  line-height: 100%;
-  letter-spacing: 0%;
   &-sm {
+    font-weight: 400;
+    line-height: 100%;
     font-size: pxToRem(18);
   }
 
   &-medium {
+    font-weight: 400;
     font-size: pxToRem(20);
     line-height: pxToRem(28);
   }
 
   &-large {
+    line-height: 100%;
     font-size: pxToRem(30);
     font-weight: 500;
   }
 
   &-xlarge {
+    line-height: 100%;
     font-size: pxToRem(40);
     font-weight: 500;
   }
 
   &-xxlarge {
+    font-weight: 400;
+    line-height: 100%;
     font-size: pxToRem(60);
-    font-weight: 500;
+    font-weight: bold;
   }
 }
 
