--- a/html-css-practice/src/stylesheets/layout/_header.scss
+++ b/html-css-practice/src/stylesheets/layout/_header.scss
@@ -1,7 +1,7 @@
 @use "../abstracts" as *;
 
 .header-wrapper {
-  padding-top: 32px;
+  padding: 32px 0;
 
   .header-content {
     display: flex;
@@ -23,20 +23,14 @@
         height: 100%;
       }
 
-      .nav-item {
-
-      }
-
       .nav-cta {
         padding: 20px 35px;
         border: $main-border;
-        border-radius: 18px;
-        transition: border-color .3s, background-color .3s, transform .3s, color .3s;
+        border-radius: 12px;
 
         &:hover {
           outline: 0;
           background-color: $border-color;
-          transform: scale3d(.98, .98, .01);
         }
 
         &:hover .nav-link {
