feat: implement services section #4

--- a/html-css-practice/src/layout/main.html
+++ b/html-css-practice/src/layout/main.html
@@ -3,4 +3,6 @@
   <include src="./src/sections/hero.html"></include>
   <!-- Sponsors -->
   <include src="./src/sections/sponsors.html"></include>
+  <!-- Services -->
+   <include src="./src/sections/services.html"></include>
 </main>
