--- a/html-css-practice/src/stylesheets/base/_typography.scss
+++ b/html-css-practice/src/stylesheets/base/_typography.scss
@@ -34,13 +34,13 @@ button {
   &-large {
     line-height: 100%;
     font-size: pxToRem(30);
-    font-weight: 500;
+    font-weight: bold;
   }
 
   &-xlarge {
     line-height: 100%;
     font-size: pxToRem(40);
-    font-weight: 500;
+    font-weight: bold;
   }
 
   &-xxlarge {
