feat: implement cta section #5

--- a/html-css-practice/src/layout/main.html
+++ b/html-css-practice/src/layout/main.html
@@ -5,4 +5,6 @@
   <include src="./src/sections/sponsors.html"></include>
   <!-- Services -->
    <include src="./src/sections/services.html"></include>
+  <!-- CTA -->
+   <include src="./src/sections/cta.html"></include>
 </main>
