--- a/html-css-practice/src/stylesheets/base/_typography.scss
+++ b/html-css-practice/src/stylesheets/base/_typography.scss
@@ -23,6 +23,7 @@ button {
     font-weight: 400;
     line-height: 100%;
     font-size: pxToRem(18);
+    letter-spacing: 0.5;
   }
 
   &-medium {
