feat: implement case studies #6

--- a/html-css-practice/src/layout/main.html
+++ b/html-css-practice/src/layout/main.html
@@ -4,7 +4,9 @@
   <!-- Sponsors -->
   <include src="./src/sections/sponsors.html"></include>
   <!-- Services -->
-   <include src="./src/sections/services.html"></include>
+  <include src="./src/sections/services.html"></include>
   <!-- CTA -->
-   <include src="./src/sections/cta.html"></include>
+  <include src="./src/sections/cta.html"></include>
+  <!-- Case Studies -->
+  <include src="./src/sections/case-studies.html"></include>
 </main>
