feat: implement word process card #7

--- a/html-css-practice/src/stylesheets/sections/_index.scss
+++ b/html-css-practice/src/stylesheets/sections/_index.scss
@@ -2,4 +2,5 @@
 @forward "sponsors";
 @forward "services";
 @forward "cta";
-@forward "case-studies"
+@forward "case-studies";
+@forward "work-process";
