--- a/html-css-practice/src/layout/main.html
+++ b/html-css-practice/src/layout/main.html
@@ -9,4 +9,6 @@
   <include src="./src/sections/cta.html"></include>
   <!-- Case Studies -->
   <include src="./src/sections/case-studies.html"></include>
+<!-- Work Process -->
+  <include src="./src/sections/work-process.html"></include>
 </main>
